1999-04-09  Tom Tromey  <tromey@cygnus.com>

	* automake.in: Register the `java' language.
	(resolve_linker): Handle GCJLINK.
	(lang_java_rewrite): New function.
	(LANG_IGNORE, LANG_PROCESS, LANG_SUBDIR): New constants.
	(lang_c_rewrite): Use new constants.
	(lang_cxx_rewrite): Likewise.
	(lang_header_rewrite): Likewise.
	(lang_yacc_rewrite): Likewise.
	(lang_yaccxx_rewrite): Likewise.
	(lang_lex_rewrite): Likewise.
	(lang_lexxx_rewrite): Likewise.
	(lang_asm_rewrite): Likewise.
	(lang_f77_rewrite): Likewise.
	(lang_ppf77_rewrite): Likewise.
	(lang_ratfor_rewrite): Likewise.
	(lang_objc_rewrite): Likewise.
	(handle_single_transform_list): Likewise.  Handle LANG_SUBDIR
	return from rewrite function.
	(lang_java_finish): New function.
	(register_language): Changed interface and all calls.  Added
	`autodep' settings to various languages.
	(handle_dependencies): Use `autodep' property of language when
	including dependency-tracking code.

1999-04-07  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_texinfo): Indentation fixes.

1999-04-07  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* automake.in (value_to_list): Skip *only* trailing backslashes.

1999-04-07  Pavel Roskin  <pavel_roskin@geocities.com>

	* automake.in (value_to_list): Skip trailing backslashes.

1999-04-07  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* automake.in (handle_texinfo): Add texinfo.tex to config_aux_dir
	when appropriate.
	Reported by Per Cederqvist <ceder@lysator.liu.se>
	(handle_texinfo): Do not define texinfo_tex='.', use
	'$(srcdir)/texinfo.tex' instead; the directory name will be
	properly extracted.
	(require_conf_file_with_line): Fixed typo.

1999-04-03  Raja R Harinath  <harinath@cs.umn.edu>

	* automake.in (handle_tests): Test `dir=./' before `dir=', so that 
	we do not depend on PATH starting with `.'.

1999-03-31  Tom Tromey  <tromey@cygnus.com>

	* automake.in (quote_cond_val): Quote \n.
	(unquote_cond_val): Unquote \n.