@@ -1,5 +1,8 @@
 1999-04-09  Tom Tromey  <tromey@cygnus.com>
 
+	* m4/gcj.m4: New file.
+	* m4/Makefile.am (m4data_DATA): Added gcj.m4.
+
 	* automake.in: Register the `java' language.
 	(resolve_linker): Handle GCJLINK.
 	(lang_java_rewrite): New function.
